--- a/src/views/newNote/newNote.scss
+++ b/src/views/newNote/newNote.scss
@@ -1,9 +1,11 @@
-#camera{
-  height: auto;
+.camera-container {
   width: 100%;
 }
 
-#canvas{
-  height: auto;
+.action-button{
+  width: 100%;
+}
+
+#camera-view{
   width: 100%;
 }
