Add QR reader and api request

--- a/src/views/newNote/newNote.scss
+++ b/src/views/newNote/newNote.scss
@@ -1,9 +1,12 @@
+@import '@/assets/colors.scss';
+
 .camera-container {
   width: 100%;
 }
 
 .action-button{
   width: 100%;
+  background-color: $purple;
 }
 
 #camera-view{
